增加测试用例

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.64</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
