--- a/safeKeyboard-common/src/main/resources/config/application.yml
+++ b/safeKeyboard-common/src/main/resources/config/application.yml
@@ -25,3 +25,6 @@ debug: true
 base:
   messages:
     default-mapping-code: BASEBP0001
+  config:
+    systemCode: SAFE0001
+    systemName: SAFE-APP
