--- a/safeKeyboard-common/src/main/resources/config/application.yml
+++ b/safeKeyboard-common/src/main/resources/config/application.yml
@@ -33,3 +33,9 @@ base:
   http:
     rootUri:
      skbs:  http://localhost:8082
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/user?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
